[project]
name = "dms-scheduler"
version = "0.1.0"
description = "Data Moving Service scheduler"
authors = [{name = "DMS Team"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "redis>=7.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.26",
    "python-dotenv>=1.0",
    "asgi-lifespan==2.1.0",
    "typer>=0.9",
    "python-json-logger>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.21",
    "httpx>=0.26",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
