[project]
name = "dms-scheduler"
version = "0.1.0"
description = "Data Moving Service scheduler service"
authors = [{ name = "DMS Team" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "redis>=5.0.0",
    "pydantic>=2.4",
    "pydantic-settings>=2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "httpx>=0.24",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
